@startuml

title __BOXES's Class Diagram__\n

  package boxes {
    class BlackHoleBox {
        - blackHoleBox : List<Thing>
        + BlackHoleBox()
        + add()
        + isInTheBox()
    }
  }
  

  package boxes {
    abstract class Box {
        {abstract} + add()
        + add()
        {abstract} + isInTheBox()
    }
  }
  

  package boxes {
    class Main {
        {static} + main()
    }
  }
  

  package boxes {
    class MaxWeightBox {
        - maxWeight : int
        - boxOfThings : List<Thing>
        + MaxWeightBox()
        + MaxWeightBox()
        + add()
        + isInTheBox()
    }
  }
  

  package boxes {
    class OneThingBox {
        - oneThingBox : List<Thing>
        + OneThingBox()
        + add()
        + isInTheBox()
    }
  }
  

  package boxes {
    class Thing {
        - name : String
        - weight : int
        + Thing()
        + Thing()
        + getName()
        + getWeight()
        + equals()
        + hashCode()
    }
  }
  

  BlackHoleBox -up-|> Box
  MaxWeightBox -up-|> Box
  OneThingBox -up-|> Box


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
